<resources>
    <string name="app_name">PayPointRetailer</string>
    <string name="pay_point_retailer">PayPoint Retailer</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="partner_with_the_market_leader">Partner with the market leader</string>
    <string name="get_scale_security_and_trust_that_comes_with_working_with_the_market_leader">Get scale,security and trust that comes with working with the market leader</string>
    <string name="register">Register</string>
    <string name="secure_safe_amp_reliable"><![CDATA[Secure, Safe & Reliable]]></string>
    <string name="rbi_approved_trusted_by_25_000_retail_merchants_2_00_000_users"><![CDATA[RBI approved trusted by 25,000+ retail merchants & 2,00,000+ users]]></string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_required">Mobile Number *</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="password">Password</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="welcome">Welcome,</string>
    <string name="enter_your_password_or_login_using_your_fingerprint">Enter your password or login using your fingerprint</string>
    <string name="use_fingerprint_login">Use Fingerprint Login</string>
    <string name="confirm">Confirm</string>
    <string name="login_to_paypointindia">Login to PayPointIndia</string>
    <string name="use_password">Use Password</string>
    <string name="your_one_time_password_otp_has_been_sent_to_your_registered_mobile_number">Your One Time Password (OTP) has been sent to your registered mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="welcome_to_paypoint">Welcome to Paypoint</string>
    <string name="become_a_paypoint_partner">Become a Paypoint Partner</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="referal">Referal</string>
    <string name="referred_by">Referred By</string>
    <string name="set_password">Set Password</string>
    <string name="i_agree_to_the_terms_and_conditions_privacy_policy_other_policies">I agree to the Terms and Conditions, Privacy Policy, Other Policies</string>
    <string name="create_account">Create Account</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="resend"><u>Resend</u></string>
    <string name="i_want_to_receive_important_information_and_updates_over_whatsapp">I want to receive important information and updates over whatsapp</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="activate_your_account_in_3_easy_steps">Activate your account in 3 easy steps</string>
    <string name="business_name">Business Name*</string>
    <string name="business_name_">Business Name</string>
    <string name="type_of_shop">Type of shop*</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_1_">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pincode">Pincode*</string>
    <string name="pincode_">Pincode</string>
    <string name="city">City*</string>
    <string name="city_">City</string>
    <string name="state">State*</string>
    <string name="state_">State</string>
    <string name="proceed">Proceed</string>
    <string name="send_otp">SEND OTP</string>
    <string name="verify_your_aadhar">Verify your Aadhar</string>
    <string name="submit">Submit</string>
    <string name="verify_your_pan">Verify your PAN</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_colum">Account Number: </string>
    <string name="re_enter_account_number">Re-enter Account number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="business_Detail">Business \nDetails</string>
    <string name="verify_Aadhaar">Verify Aadhaar</string>
    <string name="verify_Pan">Verify Pan</string>
    <string name="bank_Detail">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="address_prof">Address Prof</string>
    <string name="retailer_agreement">Retailer \nAgreement</string>
    <string name="select_document_type">Select Document Type</string>
    <string name="select">Select</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="mobile_number_is_required">Mobile number is required *</string>
    <string name="first_name_is_required">First Name is required *</string>
    <string name="last_name_is_required">Last name is required *</string>
    <string name="password_is_required">Password is required *</string>
    <string name="business_name_is_required">Business name is required*</string>
    <string name="aadhar_number_is_required">Aadhar number is required</string>
    <string name="otp_is_required">otp is required</string>
    <string name="please_select_bank">Please select Bank</string>
    <string name="please_enter_ifsc_coe">Please enter IFSC coe</string>
    <string name="please_select_account_type">Please select Account type</string>
    <string name="please_enter_account_number">Please enter account number</string>
    <string name="challanger_bank">Challanger Bank</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="aeps_balance">AEPS Balance</string>
    <string name="add_limit">Add Limit</string>
    <string name="view_recent_activity">View Recent Activity</string>
    <string name="favourites">Favourites</string>
    <string name="add_more">Add More</string>
    <string name="search_for_the_service_you_need">Search for the service you need</string>
    <string name="recharge">Recharge</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="insurance">Insurance</string>
    <string name="booking">Booking</string>
    <string name="personal_details">Personal Details</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit_Profile</string>
    <string name="agent_id">Agent ID</string>
    <string name="business_contact_details"><![CDATA[Business & Contact Details]]></string>
    <string name="current_mobile_number">Current Mobile Number</string>
    <string name="current_email_address">Current Email Address</string>
    <string name="address">Address</string>
    <string name="enter_address_line_1">Enter address line 1</string>
    <string name="enter_address_line_2">Enter address line 2</string>
    <string name="choose_state">Choose State</string>
    <string name="choose_district">Choose District</string>
    <string name="district">District</string>
    <string name="choose_city">Choose City</string>
    <string name="enter_pin_code">Enter PIN code</string>
    <string name="enter_area">Enter Area</string>
    <string name="enter_region">Enter Region</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="kyc_pending">KYC Pending</string>
    <string name="region">Region</string>
    <string name="area">Area</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="load_money">Load Money</string>
    <string name="card_deposit">Card Deposit</string>
    <string name="upi_payment">UPI Payment</string>
    <string name="cash_deposit">Cash Deposit</string>
    <string name="online_payment">Online Payment</string>
    <string name="search">Search</string>
    <string name="business_Report">Business Report</string>
    <string name="create_support_request">Create Support Request</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub-Category</string>
    <string name="select_problem">Select Problem</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="message">Message</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="send_request">Send Request</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="from_date">From Date</string>
    <string name="generate_report">Generate Report</string>
    <string name="old_password_is_required">Old password is required*</string>
    <string name="old_password_not_match">Old password is not match</string>
    <string name="new_password_is_required">New password is required*</string>
    <string name="new_password_and_confirm_paasword_not_macth">New password and confirm password not match </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_mobile_number_registered_with_paypoint">Enter mobile number registered with paypoint</string>
    <string name="mobile_Recharge">Mobile Recharge</string>
    <string name="choose_operator">Choose operator</string>
    <string name="select_operator">select Operator</string>
    <string name="amount">Amount</string>
    <string name="recharge_now">Recharge Now</string>
    <string name="browser_plan">Browser Plan</string>
    <string name="while_we_do_our_best_to_stay_updated_with_the_plans_we_advice_you_to_check_with_your_operator_to_confirm_the_same">While we do our best to stay updated with the plans, we advice you to check with your operator to confirm the same</string>
    <string name="talktime">Talktime:</string>
    <string name="i_agree_all_the_terms_conditions"><![CDATA[I agree all the Terms & Conditions]]></string>
    <string name="how_to_take_a_upi_limit">How to take a UPI Limit</string>
    <string name="add_new_vpa">Add New VPA</string>
    <string name="how_to_take_a_limit_with_cash_deposit">How to take a limit with cash Deposit</string>
    <string name="branch">Branch</string>
    <string name="add_bank">Add Bank</string>
    <string name="customer_id">Customer ID</string>
    <string name="dth_recharge">DTH Recharge</string>
    <string name="customer_name">Customer Name :</string>
    <string name="rmn_number">RMN Number :</string>
    <string name="name">Name:</string>
    <string name="values">Values:</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="commissions">Commissions</string>
    <string name="electricity_bill_payment">Electricity Bill Payment</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="customer_mobile_number">Customer Mobile Number</string>
    <string name="k_number">K Number</string>
    <string name="fetch_details">Fetch Details</string>
    <string name="please_check_internet_connection">Please check Internet connection</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="gift_voucher">Gift Voucher</string>
    <string name="know_more">know More</string>
    <string name="term_conditions"><![CDATA[Term & conditions]]></string>
    <string name="buy_now">BUY NOW</string>
    <string name="sender_mobile_number">Sender Mobile Number</string>
    <string name="sender_email_id">Sender Email Id</string>
    <string name="receiver_mobile_number">Receiver Mobile Number</string>
    <string name="receive_email_id">Receive Email Id</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="aadhar_card_no">Aadhar Card Number</string>
    <string name="pan_card_number">Pan Card Number</string>
    <string name="add_new_beneficiary">Add New Beneficiary</string>
    <string name="add_beneficiary">Add  Beneficiary</string>
    <string name="select_bank">Select Bank</string>
</resources>