<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOneTimeOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/enter_one_time_password"
        app:fontFamily="@font/poppinssemibold"
        android:textColor="@color/main_blue"
        android:textSize="18dp"/>

   <in.aabhasjindal.otptextview.OtpTextView
       android:id="@+id/pinView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tvOneTimeOtp"
       android:layout_marginTop="32dp"
       android:textColor="@color/otp_text_color"
       app:otp_text_size="18dp"
       app:bar_enabled="false"
       app:bar_height="2dp"
       app:length="6"
       app:otp_box_background="@drawable/edittext_unactive_shape"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_Resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
         app:layout_constraintTop_toBottomOf="@+id/pinView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Didnt receive an OTP?  "
            android:textSize="14dp"
            android:textColor="@color/blue_grey"
            app:fontFamily="@font/poppinsregular"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvText"
            android:text="@string/resend"
            android:textSize="14dp"
            android:textColor="@color/main_blue"
            app:fontFamily="@font/poppinsregular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/ivChecked"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="22dp"
        android:button="@drawable/checkbok_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_Resend"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChecked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="22dp"
        android:text="@string/i_want_to_receive_important_information_and_updates_over_whatsapp"
        android:textColor="@color/grey_ppi"
        android:singleLine="false"
        android:textSize="12dp"
        app:fontFamily="@font/poppinsregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivChecked"
        app:layout_constraintTop_toBottomOf="@id/ll_Resend" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/confirm_otp"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvChecked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>